# basic-instruction-cycle-simulator

./: .gitignore  CMakeLists.txt
files/: program1.txt  program2.txt  program3.txt  sample_program.txt
include/: Simulator.h
include/cpu/: ALU.h  CPU.h  ControlUnit.h  Registers.h
include/memory/: Memory.h
include/utils/: Constants.h
src/: Simulator.cpp  main.cpp
src/cpu/: ALU.cpp  CPU.cpp  ControlUnit.cpp
src/memory/: Memory.cpp
src/utils/: Constants.cpp
